[KNOWAGE-4275] Added position properties to dialog to avoid mispositioning on IE

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -31,6 +31,8 @@
 
     .exportingPdfDialog {
     	background: rgba(0, 0, 0, .5);
+    	top: 0;
+	    left: 0;
 	    height: 100%;
 	    position: absolute;
 	    width: 100%;
